2018-09-29  Eric Herman <eric@freesa.org>

	shift right/left greater than number of bits should just fill
	the bit array with the fill value

	* src/eba.c: deal with shiftval greater than bits_len value
	* tests/test-shift-fill.c: test greater than bits_len


2018-09-22  Eric Herman <eric@freesa.org>

	add an eba_set_all function
	add EBA_USE_LIBC and EBA_DIY_MEMSET checks
	rework the defines to be more explicit

	* configure.ac: bump version number
	* src/eba.h: reasonable default for Eba_crash()
	* src/eba.c: eba_set_all, eba_diy_memset
	* tests/test-set-all.c: new test
	* demos/sieve-of-eratosthenes.c: demo eba_set_all
	* tests/test-get.c: #define rework
	* tests/test-ring-shift.c: #define rework
	* tests/test-set.c: #define rework
	* tests/test-shift-fill.c: #define rework
	* tests/test-swap.c: #define rework
	* tests/test-toggle.c: #define rework
	* Makefile.am: #define rework
	* .gitignore: ignore new file
	* misc/pre-tidy.patch: re-spin



2018-08-02  Eric Herman <eric@freesa.org>

	Make private functions static
	eba_diy_memcpy, eba_do_stack_free, eba_no_stack_free

	* src/eba.h: remove function declarations,
			add EBA_SKIP_LOG_ERRORS check
	* src/eba.c: make declarations static
	* Makefile.am: clarify build options
	* misc/pre-tidy.patch: re-spin


2017-04-23  Eric Herman <eric@freesa.org>

	add EBA_SIZE_TYPE

	* src/eba.h: only indlude stddef.h if no EBA_SIZE_TYPE
	* README: update docs
	* Makefile.am: debug example
	* misc/pre-tidy.patch: re-spin


2017-03-15  Eric Herman <eric@freesa.org>

	fix assumption that size_t is unsigned long

	* src/eba.c: cast size_t to unsigned long for printf


2017-02-27  Eric Herman <eric@freesa.org>

	add test test-shift-fill, which revealed a copy-paste bug
	illustrate turning off endian check in demo

	* src/eba.c: fix bug, EBA_SKIP_SHIFTS should skip shifts
	* tests/test-shift-fill.c: new test
	* Makefile.am: test-shift-fill, build demo with -DEBA_SKIP_ENDIAN
	* demos/sieve-of-eratosthenes.c: adjust comment